[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Sentry.gd" type="Script" id=1]
[ext_resource path="res://Sentrycontrol.gd" type="Script" id=2]
[ext_resource path="res://Assets/simpleghost.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="control" type="KinematicBody2D" parent="."]
scale = Vector2( -1, 1 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="control"]
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="control"]
shape = SubResource( 1 )

[node name="Scout" type="Area2D" parent="control"]
position = Vector2( -3, 0 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="control/Scout"]
position = Vector2( 3, 0 )
shape = SubResource( 2 )

[node name="Patrol " type="Area2D" parent="control"]
position = Vector2( -3, 0 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="control/Patrol "]
shape = SubResource( 3 )

[node name="BulletTimer" type="Timer" parent="control"]
process_mode = 0
one_shot = true
autostart = true

[node name="Sprite2" type="Sprite" parent="."]
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 5
[connection signal="area_entered" from="control/Scout" to="control" method="_on_Scout_area_entered"]
[connection signal="area_entered" from="control/Patrol " to="control" method="_on_Scout_area_entered"]
[connection signal="area_entered" from="control/Patrol " to="control" method="_on_Patrol__area_entered"]
[connection signal="area_exited" from="control/Patrol " to="control" method="_on_Patrol__area_exited"]
[connection signal="timeout" from="control/BulletTimer" to="control" method="_on_BulletTimer_timeout"]
